update spacing to fix later

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,6 @@
     --font-sans: var(--font-sans);
     --color-OffBlack: var(--off-black);
     --color-primary2: var(--primary-2);
-    
     --color-OffBlack2: var(--off-black-2);
     --color-background: var(--background);
     --color-foreground: var(--foreground);
@@ -160,6 +159,6 @@
         @apply size-8 md:size-13 ;
     }
     .main-container{
-        @apply max-w-7xl mx-auto;
+        @apply px-5 lg:max-w-6xl max-w-7xl mx-auto;
     }
 }
